Fixed issue with scrollbar showing on main column pane

--- a/app/javascript/styles/gabsocial/components.scss
+++ b/app/javascript/styles/gabsocial/components.scss
@@ -1475,7 +1475,8 @@ a.account__display-name {
 	flex-direction: column;
 	width: 100%;
 	margin: 0 auto;
-
+	overflow: hidden;
+	
 	.column,
 	.drawer {
 		width: 100%;
